# python-package-cookiecutter

./: README.md  cookiecutter.json
{{cookiecutter.project_name}}/: .pre-commit-config.yaml  Pipfile  README.md  mypy.ini  pyproject.toml
{{cookiecutter.project_name}}/{{cookiecutter.project_name}}/: __init__.py
